add text to the lorem <p>

--- a/index.html
+++ b/index.html
@@ -55,16 +55,21 @@
         <div class="about-content">
           <div class="about-info">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non
-              ipsa, iste totam, laudantium obcaecati temporibus deserunt sit est
-              velit ad facilis voluptas blanditiis pariatur? Libero
-              exercitationem placeat laborum ad maiores.
+              I'm Theo Fernandez Beraldi, a Software Engineering student with a
+              strong interest in web development and technology. I am motivated
+              to create solutions that are not only useful but also intuitive
+              for users. I consider myself an analytical person, always looking
+              to learn new technologies to improve my projects.
             </p>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis
-              nulla nam labore et eum nisi molestias dolorem, dolorum, officiis
-              blanditiis perspiciatis aperiam dolore exercitationem maxime eaque
-              earum repellendus adipisci accusantium!
+              My goal is to continue developing my skills and create innovative
+              applications that enhance productivity. In the future, I would
+              like to integrate artificial intelligence to offer even more
+              personalized experiences.
+            </p>
+            <p>
+              Outside of programming, I enjoy staying active and balancing my
+              personal and professional life.
             </p>
           </div>
           <div class="about-technologies">
@@ -94,9 +99,10 @@
             <div class="project-content">
               <h3>Project 1</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Quisquam quos, voluptates, quod, quas dolorum quae quia
-                quibusdam nemo voluptatum doloremque quidem.
+                This project is a practice of my JavaScript skills, where I
+                implemented features like search, data filtering, and dynamic
+                table updates. The goal was to enhance my knowledge of DOM
+                manipulation and work with data interactively.
               </p>
               <div class="project-links">
                 <a
