just add the github link and linkedin link

--- a/index.html
+++ b/index.html
@@ -37,10 +37,13 @@
             <a href="#Projects">View My Work</a>
           </button>
           <div class="social-icons">
-            <a href="https://github.com/theo" target="_blank">
+            <a href="https://github.com/theofernandezz" target="_blank">
               <i class="bx bxl-github"></i>
             </a>
-            <a href="https://linkedin.com/in/theo" target="_blank">
+            <a
+              href="https://www.linkedin.com/in/theo-fernandez-895a08207/"
+              target="_blank"
+            >
               <i class="bx bxl-linkedin-square"></i>
             </a>
           </div>
@@ -172,10 +175,13 @@
       <div class="container footer-content">
         <p>&copy; 2024 Theo Fernandez Beraldi</p>
         <div class="social-links">
-          <a href="https://github.com/theo" target="_blank">
+          <a href="https://github.com/theofernandezz" target="_blank">
             <i class="bx bxl-github"></i>
           </a>
-          <a href="https://linkedin.com/in/theo" target="_blank">
+          <a
+            href="https://www.linkedin.com/in/theo-fernandez-895a08207/"
+            target="_blank"
+          >
             <i class="bx bxl-linkedin-square"></i>
           </a>
         </div>
