Added new project to my portfolio

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               <img src="./img/project1.png" alt="project1" />
             </div>
             <div class="project-content">
-              <h3>Project 1</h3>
+              <h3>Interactive-Dashboard</h3>
               <p>
                 This project is a practice of my JavaScript skills, where I
                 implemented features like search, data filtering, and dynamic
@@ -121,6 +121,31 @@
                 >
                 <a
                   href="https://github.com/theofernandezz/interactive-dashboard"
+                  class="project-btn"
+                  >View Code</a
+                >
+              </div>
+            </div>
+          </div>
+          <div class="project">
+            <div class="project-img">
+              <img src="img/project2.png" alt="project2" />
+            </div>
+            <div class="project-content">
+              <h3>Shopping-List-Manager</h3>
+              <p>
+                A simple web application to create and manage shopping lists.
+                This project was built as part of my learning journey in web
+                development, focusing on HTML, CSS, and JavaScript.
+              </p>
+              <div class="project-links">
+                <a
+                  href="https://theofernandezz.github.io/shopping-list-manager/"
+                  class="project-btn"
+                  >View Project</a
+                >
+                <a
+                  href="https://github.com/theofernandezz/shopping-list-manager"
                   class="project-btn"
                   >View Code</a
                 >
